with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.18.1
====================
[2820260] Fix password expiry interval processing during Edit.
[2818653] Password expiry interval now exported to XML correctly in decimal
and show current expiry interval during Edit, if present.
[2813295] 'Browse + Autotype' system tray menu items fixed - thanks to
Vasily for reporting and sending the patches for this.
[2085058] Old (1.x) format databases now closed correctly.
[] Fixed problem with viewing a shortcut in read-only mode - thanks to
gillum for reporting and helping track this down.
[] Fix crash error using External Editor on Notes field.
[] Password Verification field not set when editing/viewing an alias entry
and the password is hidden.
[] Enter key again works in initial dialog if user uses browse button to
select a database to open.
[] AutoType by an alias now has correct password and its own notes data
rather than '[Alias]' and its base's notes data, respectively.
[] Runcommand no longer truncates the first field if it is within double
quotes.

New Features for 3.18.1
=======================
[] Add new AutoType special fields '\wnnn' and '\Wnnn'. Unlike '\d', which
sets the delay between sending each subsequent character, '\w' & '\W' introduces
a one-time delay where they appear.  For '\w', the value 'nnn' is in
milli-seconds. For '\W', this specifies seconds. Note: Max. value is
999s (16m 39s), during which time PasswordSafe will be unresponsive
while it waits the specified time. Also support via the Run Command $a command.

New Features for 3.18
=====================
[] Add minidump support for release builds so that we can try to solve