@@ -321,7 +321,7 @@ STRINGTABLE
 BEGIN
   IDS_PICKMERGEFILE       "Please Choose a Database to Merge"
   IDS_MERGINGDATABASE     "Merging database: %s\r\n"
-  IDS_MERGECONFLICTS      "Conflicting entries for \xbb%s\xbb%s\xbb%s\xbb.\r\n  Added merged entry as \xbb%s\xbb%s\xbb%s\xbb.\r\n    Differing field(s): %s"
+  IDS_MERGECONFLICTS      "Conflicting entries for \xab%s\xbb \xab%s\xbb \xab%s\xbb.\r\n  Added merged entry as \xab%s\xbb \xab%s\xbb \xab%s\xbb.\r\n    Differing field(s): %s"
   IDS_MERGECOMPLETED      "\r\nMerge completed: %d %s added\r\n(%d %s, %d %s, %d %s)"
   IDS_MERGEADDED          "\r\nThe following new %s %s merged into this database:"
 END
@@ -713,8 +713,8 @@ BEGIN
   IDS_VKBDFONT             "Set Virtual Keyboard font"
   IDS_DRAGTOCOPY           "Dragbar: Hold left mouse button down on selected picture and drag to, say, a field on a web page. On releasing the mouse button, the particular contents (Group, Title, Username, Password, Notes or URL) will be pasted into that field."
   IDS_ADDENTRY             "Add Entry"
-  IDS_EDITENTRY            "Edit Entry \xbb%s\xbb%s\xbb%s\xbb"
-  IDS_VIEWENTRY            "View Entry \xbb%s\xbb%s\xbb%s\xbb"
+  IDS_EDITENTRY            "Edit Entry:   \xab%s\xbb \xab%s\xbb \xab%s\xbb"
+  IDS_VIEWENTRY            "View Entry:   \xab%s\xbb \xab%s\xbb \xab%s\xbb"
   IDS_NA                   "N/A"
   IDS_ISANALIAS            "This is an alias of: '%s'"
   IDS_ISANALIASBASE        "This is an alias base entry."
